--- a/styles.css
+++ b/styles.css
@@ -70,24 +70,21 @@ a {
     white-space: nowrap;
 }
 
-.conteudo {
-    background-color: #2e2e2e;
-}
-
 .conteudo .principal {
+    background-color: #2e2e2e;
     flex-direction: column;
     text-align: center;
     align-items: center;
     justify-content: center;
+    padding: 20% 0;
 }
 
 .principal {
     display: flex;
-    position: relative;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    height: 90vh;
+    height: 70vh;
     width: 90%;
     margin: auto;
 }
